# planet-engine

./: CMakeLists.txt  planet-engine.sln
FanGenTest/: FanGenTest.vcxproj  FanGenTest.vcxproj.filters  fragment.glsl  geometry.glsl  main.cpp  vertex.glsl
app/: CMakeLists.txt  app.vcxproj  app.vcxproj.filters  app.vcxproj.sean lynch.nvuser  input.cpp  input.h  main.cpp  watchdog.cpp
embedfile/: Program.cs  embedfile.csproj
embedfile/Properties/: AssemblyInfo.cs
glslpp/: CMakeLists.txt  main.cpp
gpu_surface/: gpu_surface.vcxproj  gpu_surface.vcxproj.filters  patch_data.h  patch_info.h  remove_duplicates.cpp  remove_duplicates.h  rmdup-1.glsl  rmdup-2.glsl  should_merge.glsl  should_subdivide.glsl  subdivide.glsl  surface.cpp  surface.h
noisemaker/: Program.cs  Resources.cs  noisemaker.csproj  test.xml
noisemaker/Properties/: AssemblyInfo.cs
rcmgr/: CMakeLists.txt  rcmgr.vcxproj  rcmgr.vcxproj.filters  resources.cpp  resources.h
render/: CMakeLists.txt  DistanceCalc.comp  DistanceCalc.comp.cpp  MeshGenShader.glsl  MeshGenShader.vert  MeshGenShader.vert.cpp  NoiseSource.xml  PlanetFragmentShader.frag  PlanetFragmentShader.frag.cpp  PlanetVertexShader.vert  PlanetVertexShader.vert.cpp  caps.h  constants.h  copy-commands.glsl  gl_core.c  gl_core.h  length.glsl  max.glsl  mesh_gen.glsl  noise.glsl  occludee-frag.glsl  occludee-vert.glsl  occluder-geom.glsl  occluder-vert.glsl  occlusion.cpp  occlusion.h  patch_pipeline.cpp  patch_pipeline.h  patch_subdivide.glsl  planet_shader_frag.glsl  planet_shader_vert.glsl  render.vcxproj  render.vcxproj.filters  render2.vcxproj  render2.vcxproj.filters  renderer.cpp  renderer.h  shader.cpp  shader.h  vertex_gen.glsl
render2/: buffer_manager.cpp  buffer_manager.h  command_update.glsl  compact.glsl  defs.h  get_pos.glsl  gl_core.c  gl_core.h  is_glsl.h  length.glsl  max.glsl  mesh_gen.comp  mesh_gen.glsl  mesh_gen2.glsl  mesh_gen3.glsl  noise.glsl  occlusion-culling-frag.glsl  patch_data.h  patch_pipeline.cpp  patch_pipeline.h  planet_shader.frag  planet_shader.vert  planet_shader_frag.glsl  planet_shader_vert.glsl  render2.vcxproj  render2.vcxproj.filters  renderer.cpp  renderer.h  shader.cpp  stride.h  upsample.glsl  vertex_gen.glsl
render3/: calc_pos.glsl  free_list.h  managed_buffer.cpp  managed_buffer.h  max.glsl  memmgr.cpp  memmgr.h  merge_update.glsl  mesh_gen.glsl  noise.glsl  patch_data.glsl  patch_data.h  planet.cpp  planet.h  render3.vcxproj  render3.vcxproj.filters  stride.h  subdivide_update.glsl  vertex_gen.glsl
shader/: Reduce.comp  shader.vcxproj
surface/: CMakeLists.txt  contig_vector.h  defs.h  indexgen.cpp  indexgen.h  mathutils.h  patch.cpp  patch.h  planet.cpp  planet.h  surface.vcxproj  surface.vcxproj.filters
test/MeshGenTest/: MeshGenTest.vcxproj  MeshGenTest.vcxproj.filters  main.cpp  mesh_gen.glsl
test/MeshGenTest2/: MeshGenTest2.vcxproj  MeshGenTest2.vcxproj.filters  frag.glsl  main.cpp  vert.glsl  vertex_gen.glsl
utils/: CMakeLists.txt  any_of.h  appbase.cpp  appbase.h  buffer_manager.cpp  buffer_manager.h  compute.cpp  compute.h  findutils.h  gl_core.c  gl_core.h  input.cpp  input.h  load_file.cpp  load_file.h  shader.cpp  shader.h  spaced_buffer.h  templateutils.h  utils.vcxproj  utils.vcxproj.filters
